[gd_scene load_steps=16 format=2]

[ext_resource path="res://game/ground/path.glb" type="PackedScene" id=1]
[ext_resource path="res://game/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ground/Floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ClickBeacon.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/Sun.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/limbo/signpost.glb" type="PackedScene" id=7]
[ext_resource path="res://game/limbo/Limbo.gd" type="Script" id=8]
[ext_resource path="res://game/ghost/GhostSpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/limbo/door.tscn" type="PackedScene" id=10]
[ext_resource path="res://game/dialog/not-ready.ogg" type="AudioStream" id=11]
[ext_resource path="res://game/dialog/ready.ogg" type="AudioStream" id=12]
[ext_resource path="res://game/someone.tscn" type="PackedScene" id=13]
[ext_resource path="res://game/ground/arch.tscn" type="PackedScene" id=14]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4.47389, 3.37134, 3.8304 )

[node name="Limbo" type="Spatial"]
script = ExtResource( 8 )

[node name="Floor" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.0828 )

[node name="Camera" parent="." instance=ExtResource( 2 )]

[node name="Sun" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.880756, -0.366651, 0.299727, -0.0557725, 0.548196, 0.834488, -0.470275, -0.751697, 0.462378, 0, -0.0579491, 0 )

[node name="signpost" parent="." instance=ExtResource( 7 )]

[node name="paths" type="Spatial" parent="."]

[node name="path8" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.939058, 0, -0.343758, 0, 1, 0, 0.343758, 0, 0.939058, 6.2691, 0, -16.8358 )

[node name="path13" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.65869, 0, 0.752415, 0, 1, 0, -0.752415, 0, 0.65869, 0.686462, 0, -17.7393 )

[node name="path14" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.362438, 0, 0.932008, 0, 1, 0, -0.932008, 0, 0.362438, -4.09887, 0, -20.5614 )

[node name="path15" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.47092, 0, 0.882176, 0, 1, 0, -0.882176, 0, 0.47092, -9.66234, 0, -23.3694 )

[node name="path11" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.794383, 0, -0.607418, 0, 1, 0, 0.607418, 0, 0.794383, 9.65662, 0, -21.7304 )

[node name="path12" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.794383, 0, -0.607418, 0, 1, 0, 0.607418, 0, 0.794383, 13.6924, 0, -27.0083 )

[node name="path9" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.876147, 0, -0.482044, 0, 1, 0, 0.482044, 0, 0.876147, 2.81927, 0, -11.2158 )

[node name="path10" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.976319, 0, -0.216337, 0, 1, 0, 0.216337, 0, 0.976319, 0.202814, 0, -5.66539 )

[node name="path16" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.00816819, 0, 0.999967, 0, 1, 0, -0.999967, 0, 0.00816819, -4.11944, 0, -1.88574 )

[node name="path17" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.134522, 0, 0.99091, 0, 1, 0, -0.99091, 0, 0.134522, -9.8534, 0, -1.93258 )

[node name="path18" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.0821469, 0, 0.99662, 0, 1, 0, -0.99662, 0, -0.0821469, -15.2246, 0, -2.66176 )

[node name="path19" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.215519, 0, 0.9765, 0, 1, 0, -0.9765, 0, -0.215519, -21.9201, 0, -0.580066 )

[node name="path20" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.0821469, 0, 0.99662, 0, 1, 0, -0.99662, 0, -0.0821469, -13.3392, 0, -0.531701 )

[node name="path4" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.346232, 0, 0.938149, 0, 1, 0, -0.938149, 0, 0.346232, 4.72385, 0, -1.95532 )

[node name="path21" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.48183, 0, -0.876265, 0, 1, 0, 0.876265, 0, -0.48183, 5.60205, 0, 1.32358 )

[node name="path31" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.94017, 0, -0.340708, 0, 1, 0, 0.340708, 0, -0.94017, 0.966088, 0, 5.3543 )

[node name="path32" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.984354, 0, -0.176208, 0, 1, 0, 0.176208, 0, -0.984354, 1.85569, 0, 9.90858 )

[node name="path33" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.998056, 0, -0.0623195, 0, 1, 0, 0.0623195, 0, -0.998056, 2.23277, 0, 15.2682 )

[node name="path35" parent="paths" instance=ExtResource( 1 )]
transform = Transform( -0.998056, 0, -0.0623195, 0, 1, 0, 0.0623195, 0, -0.998056, 0.755872, 0, 19.0193 )

[node name="path5" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.585142, 0, 0.810931, 0, 1, 0, -0.810931, 0, 0.585142, 8.83147, 0, 0.290136 )

[node name="path6" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.186542, 0, 0.982447, 0, 1, 0, -0.982447, 0, 0.186542, 14.1879, 0, 2.29742 )

[node name="path7" parent="paths" instance=ExtResource( 1 )]
transform = Transform( 0.316511, 0, 0.94859, 0, 1, 0, -0.94859, 0, 0.316511, 19.5498, 0, 2.88461 )

[node name="arch" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.938155, 0, -0.346215, 0, 1, 0, 0.346215, 0, 0.938155, 25.6429, 0, 6.08993 )
target_scene = "res://game/meaning/Meaning.tscn"
title = "Meaning"

[node name="arch2" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.108746, 0, -0.99407, 0, 1, 0, 0.99407, 0, 0.108746, 1.59616, 0, 22.9362 )
target_scene = "res://game/judgement/Judgement.tscn"
title = "Judgement"

[node name="arch3" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.499153, 0, 0.866514, 0, 1, 0, -0.866514, 0, 0.499153, 16.0198, 0, -27.8098 )
target_scene = "res://game/loss/Loss.tscn"
title = "Loss"

[node name="arch4" parent="." instance=ExtResource( 14 )]
transform = Transform( -0.707773, 0, 0.70644, 0, 1, 0, -0.70644, 0, -0.707773, -13.423, 0, -26.0487 )
target_scene = "res://game/acceptance/Acceptance.tscn"
title = "Acceptance"

[node name="arch5" parent="." instance=ExtResource( 14 )]
transform = Transform( -0.982612, 0, -0.185667, 0, 1, 0, 0.185667, 0, -0.982612, -25.3263, 0, 1.00288 )
target_scene = "res://game/reincarnation/Reincarnation.tscn"
title = "Reincarnation"

[node name="GhostSpawner" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.34244, 0, 9.91556 )

[node name="door" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.65702, 0, -0.753873, 0, 1, 0, 0.753873, 0, 0.65702, 14.0939, 0, -12.5932 )

[node name="doorArea" type="Area" parent="door"]
collision_mask = 8388608

[node name="CollisionShape" type="CollisionShape" parent="door/doorArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.90735e-06, 2.50506, 2.14496 )
shape = SubResource( 1 )

[node name="dialogNotready" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.881625, 0, -0.471951, 0, 1, 0, 0.471951, 0, 0.881625, 13.2482, 3.3507, -6.29183 )
stream = ExtResource( 11 )
unit_size = 50.0
bus = "Sfx"

[node name="dialogReady" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.881625, 0, -0.471951, 0, 1, 0, 0.471951, 0, 0.881625, 13.2482, 3.3507, -6.29183 )
stream = ExtResource( 12 )
unit_size = 50.0
bus = "Sfx"

[node name="someone" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.266481, 0, -0.96384, 0, 1, 0, 0.96384, 0, 0.266481, 18.3622, 0, -6.61015 )

[node name="ClickBeacon" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.647349, 0, -0.762194, 0, 1, 0, 0.762194, 0, 0.647349, 13.8355, 6.49674, -12.1518 )

[connection signal="body_entered" from="door/doorArea" to="." method="_on_doorArea_body_entered"]
[connection signal="body_exited" from="door/doorArea" to="." method="_on_doorArea_body_exited"]
